maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:9: error: not found: value break
      break
      ^ShortestPathMaze:12: error: not found: value isGridFull
  while(!isGridFull){
         ^